--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV.Akman Jaya</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -40,8 +41,10 @@
             </div>
           </nav>
           <div class="container">
+            <div class="mt-3 mb-3">
+              <img src="img/air-minum_1302.jpg" alt="">
+            </div>
               <h1>Akman Jaya</h1>
-          <p class="mt-5">Akman jaya adalah...</p>
     </div>
 
     
